k8s_nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bzzz-api
  namespace: default
spec:
  selector:
    app: bzzz-api
  ports:
  - name: https
    protocol: TCP
    port: 80
    targetPort: 8080
