k8s_nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bzzz-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.shipit.live
    secretName: bzzz-api-tls
  rules:
  - host: api.shipit.live
    http:
      paths:
      - backend:
          serviceName: bzzz-ui
          servicePort: 80
